[tool.poetry]
name = "charmcraftcache"
version = "0.5.4"
description = "Fast first-time builds for charmcraft"
authors = ["Carl Csaposs <carl.csaposs@canonical.com>"]
readme = "README.md"

[tool.poetry.scripts]
ccc = "charmcraftcache.main:app"
charmcraftcache = "charmcraftcache.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.5"}
requests = "^2.32.3"
packaging = "^24.1"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP"]
