[project]
name = "charmcraftcache"
dynamic = ["version"]
description = "Fast first-time builds for charmcraft"
authors = [
    {name = "Carl Csaposs", email = "carl.csaposs@canonical.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.1",
    "requests>=2.32.3",
    "packaging>=24.2",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.15.0",
]

[project.urls]
repository = "https://github.com/canonical/charmcraftcache"

[project.scripts]
ccc = "charmcraftcache._main:app"
charmcraftcache = "charmcraftcache._main:app"

[tool.poetry]
version = "0.0.0"  # Overriden by poetry-dynamic-versioning
requires-poetry = ">=2.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP"]
